# care

./: CMakeLists.txt  sponge_ee.json  sponge_ee1.json
controller/: CMakeLists.txt  care.code-workspace  controller.cpp  redis_keys.h  simviz.cpp  world.urdf
point_generation/: scrub_point_3d_translated.py  torso_points_transformed.txt
point_generation/PythonTestScripts/: scrub_point_pipeline.py
